--- a/asite/feedback/templates/feedback/job_average_rating.html
+++ b/asite/feedback/templates/feedback/job_average_rating.html
@@ -52,6 +52,7 @@
 
     <p>
         <a href="{% url 'job_feedbacks' job.id %}">View All Feedbacks</a> | 
-        <a href="{% url 'add_feedback' %}">Add a Feedback</a>
+        <a href="{% url 'add_feedback' %}">Add a Feedback</a> | 
+        <a href="{% url 'select_job' %}">Back to Job List</a>
     </p>
 {% endblock %}
