--- a/asite/feedbacks/templates/feedbacks/select_job.html
+++ b/asite/feedbacks/templates/feedbacks/select_job.html
@@ -1,24 +1,24 @@
 {% extends "base.html" %}
 
-{% block title %}Select a Job{% endblock %}
+{% block title %}Select a Job Title{% endblock %}
 
 {% block content %}
-    <h1 class="text-2xl font-bold mb-6">Select a Job to View Feedbacks</h1>
+    <h1 class="text-2xl font-bold mb-6">Select a Job Title to View Feedbacks</h1>
 
-    {% if jobs %}
+    {% if job_titles %}
         <div class="my-6">
             <ul class="space-y-3">
-                {% for job in jobs %}
+                {% for job_title in job_titles %}
                     <li class="border border-gray-200 rounded-lg bg-gray-50 hover:bg-gray-100 transition duration-200">
-                        <a href="{% url 'job_feedbacks' job.id %}" class="block p-4 font-medium text-gray-800 hover:text-green-600">
-                            {{ job }}
+                        <a href="{% url 'job_title_feedbacks' job_title.id %}" class="block p-4 font-medium text-gray-800 hover:text-green-600">
+                            {{ job_title.name }} ({{ job_title.job_count }} job{{ job_title.job_count|pluralize }})
                         </a>
                     </li>
                 {% endfor %}
             </ul>
         </div>
     {% else %}
-        <p class="text-gray-600 italic">No jobs available.</p>
+        <p class="text-gray-600 italic">No job titles available.</p>
     {% endif %}
 
     <div class="mt-8">
