--- a/asite/feedbacks/templates/feedbacks/list_feedback.html
+++ b/asite/feedbacks/templates/feedbacks/list_feedback.html
@@ -58,6 +58,8 @@
     <div class="mt-6 flex space-x-4">
         <a href="{% url 'add_feedback' %}" class="text-green-600 hover:text-green-800 font-medium">Add a Feedback</a>
         <span class="text-gray-500">|</span>
+        <a href="{% url 'all_feedbacks' %}" class="text-green-600 hover:text-green-800 font-medium">View All Feedbacks</a>
+        <span class="text-gray-500">|</span>
         <a href="{% url 'select_job' %}" class="text-green-600 hover:text-green-800 font-medium">Back to Job Titles</a>
     </div>
 {% endblock %}
