--- a/asite/templates/base.html
+++ b/asite/templates/base.html
@@ -19,8 +19,11 @@
         <div class="container mx-auto">
             <ul class="flex justify-center space-x-6">
                 <li><a href="{% url 'admin:index' %}" class="hover:text-green-400 transition duration-300">Admin</a></li>
-                <li><a href="{% url 'select_job' %}" class="hover:text-green-400 transition duration-300">View Jobs</a></li>
-                <li><a href="{% url 'add_feedback' %}" class="hover:text-green-400 transition duration-300">Add Feedback</a></li>
+                <li><a href="{% url 'job_list' %}" class="hover:text-green-400 transition duration-300">View Jobs</a></li>
+                <li><a href="{% url 'job_list_api' %}" class="hover:text-green-400 transition duration-300">View Jobs (API)</a></li>
+                <li><a href="{% url 'feedback_list' %}" class="hover:text-green-400 transition duration-300">View Feedbacks</a></li>
+                <li><a href="{% url 'feedback_list_api' %}" class="hover:text-green-400 transition duration-300">View Feedbacks (API)</a></li>
+                <li><a href="{% url 'feedback_create' %}" class="hover:text-green-400 transition duration-300">Add Feedback</a></li>
             </ul>
         </div>
     </nav>
